src/test/resources/purescript_examples/manual/failing/ImportModule.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('M2')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('X')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeArgs)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('X')
        PsiElement(whitespace)('\n\n')
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('M1')
            PsiElement(whitespace)('\n')
